[package]
name = "rusty-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
axum = "0.7.4"
bundler = { git = "https://github.com/weaveVM/bundler", branch = "main" }
anyhow = "1.0.95"
reqwest = "0.12.12"
hex = "0.4.3"
